# turbo-robot

./: .dockerignore  .env  .env.example  .gitignore  DOCKER_VPS.md  Dockerfile  docker-compose.dev.yml  docker-compose.yml  ecosystem.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  referral_program_analysis.md  setup_vps.sh  tsconfig.json  update.sh  vitest.config.ts  vps_redeploy.sh
admin/: .dockerignore  Dockerfile  middleware.ts  package-lock.json  package.json
admin/prisma/: schema.prisma
admin/src/app/: page.tsx  (+2 more)
bot_py/: __init__.py  builder_bridge.py  config.py  constants.py  crypto_pay.py  db.py  helpers.py  main.py  session_store.py
data/: bot.db
legacy/ts-bot/: README.md  bot.ts  bot_helpers.ts  crypto_pay.ts
prisma/: schema.prisma
sessions/01/: 6131246501.json
src/: bot.ts  builder.d.ts  builder.ts  builder_runner.ts  config.ts  constants.ts  db.ts  prebuild_library.ts
templates/3_v_ryad/: OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  SIZE_ANALYSIS.md  index.html  optimize-assets.js  package-lock.json  package.json  quick-optimize.ps1  vite.config.js
templates/gate_of_olympus/: build-release.js  tmp_edit_release.py
templates/matching/: index.html  package-lock.json  package.json  vite.config.js
test/: admin-api-auth.test.ts  bot-flow.test.ts  bot.test.ts  builder-runtime-injection.test.ts  builder.test.ts  e2e_build.test.ts  olympus-release-build.test.ts  telegram.integration.test.ts  template-resolution-contract.test.ts  ts-node-prefer.cjs  vitest.setup.ts
tests_py/: test_async_helpers.py  test_helpers.py
(+64 files in other folders)
